fixed scrolling on mobile

--- a/style.css
+++ b/style.css
@@ -13,7 +13,6 @@ body {
 }
 
 .container {
-    max-width: 98%;
     padding: 0 30px;
     margin: 2rem auto;
 }
@@ -34,6 +33,7 @@ p {
 }
 
 .result {
+    width: 100%;
     background-color: #202020;
     padding: 20px 25px;
     border-radius: 5px;
